# base-converter

./: .gitignore  CLAUDE.md  README.md  converter.py  setup.cfg
src/base_converter/: __init__.py  converter.py
tests/: test_converter.py
