[metadata]
name = numerical-base-converter-nighthawk017
version = 0.0.1
author = nighthawk017
description = Small python program that converts base 10 integers or fractionary numbers to bases 2-9 numbers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nighthawk017/base-converter
project_urls =
    Bug Tracker = https://github.com/nighthawk017/base-converter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src