[metadata]
name = numerical-base-converter
version = 0.0.1
author = Alexandru Ghenea
author_email = alexandru.ghenea@proton.me
description = Small python program that converts base 10 integers or fractionary numbers to bases 2-9 numbers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nighthawk017/base-converter
project_urls =
    Bug Tracker = https://github.com/nighthawk017/base-converter/issues
license_expression = AGPL-3.0-only
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    base-converter = base_converter.converter:main